fixed overflow

--- a/Index.css
+++ b/Index.css
@@ -5,6 +5,7 @@
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 @media (max-width: 1200px) {
